[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dnspython>=2.7.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pypdf2>=3.0.1",
    "python-whois>=0.9.5",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
]
